@@ -1,6 +1,6 @@
 {
   "name": "simp-tlog",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "simp",
   "summary": "A module for managing Tlog",
   "license": "Apache-2.0",
